feat(collab): implement full invitation lifecycle and collaboration governance (C1-C6)
- C0: Audited existing direct-add collaboration, identified hardcoded UUIDs and missing state machine
- C1: Researcher directory search API (GET /research/researchers/search) - no email exposed, active researchers only, excludes current user/members/pending invitees, 2-char minimum
- C2: Invitation lifecycle with state machine (PENDING -> ACCEPTED/DECLINED/REVOKED/EXPIRED)
  - V35 migration: invitation table, partial unique index prevents duplicate pending invitations
  - ResearchProjectInvitation domain entity with accept/decline/revoke/expire methods
  - SendInvitationRequest, InvitationResponse models
  - Owner sends invitation, invitee receives in inbox and responds
  - 14-day TTL with hourly scheduled expiry job
- C3: Project authorization matrix enforced:
  - Team locked during SUBMITTED/UNDER_REVIEW status
  - Team read-only for terminal project states
  - OWNER role cannot be assigned via normal role update
  - Member cannot change own role
  - Owner protected from removal
- C4: Full team lifecycle UI:
  - Invite Collaborator modal with real-time researcher search (no UUID input)
  - Removed 3 hardcoded fake researcher cards
  - Project status lock banner (amber warning during review)
  - Owner card, Active collaborators, Pending invitations + resolved history
  - Invitations inbox on Research Dashboard with Accept/Decline
- C5: Dataset access separation:
  - Member removal atomically revokes all active DatasetAccessGrants
  - Soft-delete on ResearchProjectMember (removedAt/removedBy preserves audit history)
  - DatasetAccessGrantRepository.findActiveByResearcherUserId for cascade revocation
- C6: Audit trail:
  - New audit actions: COLLABORATOR_INVITED, INVITATION_ACCEPTED/DECLINED/REVOKED/EXPIRED, COLLABORATOR_ROLE_CHANGED
  - All collaboration events recorded with actor, target, project, and metadata

Security principles enforced:
  - PROJECT MEMBERSHIP != DATASET ACCES